--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve": "node server.js",
     "dev": "nodemon server.js"
   },
+  "proxy": "http://localhost:4006",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hemanthly/HealthMantra12-journal.git"
@@ -28,9 +29,11 @@
     "assert": "^2.1.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "events": "^3.3.0",
     "https-browserify": "^1.0.0",
     "nodemon": "^3.0.2",
+    "os-browserify": "^0.3.0",
     "parcel": "^2.10.3",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
@@ -42,7 +45,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -53,9 +56,11 @@
     "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.24.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1"
   },
   "browserslist": [
     "last 2 Chrome versions",
