--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "express-session": "^1.17.3",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
+    "mongoose-findorcreate": "^4.0.0",
     "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "react": "^18.2.0",
