--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mongoose": "^8.0.3",
     "mongoose-findorcreate": "^4.0.0",
     "node-fetch": "^3.3.2",
+    "npkill": "^0.11.3",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
