get all journals and delete journal

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "concurrently": "^8.2.2",
+    "console-browserify": "^1.2.0",
     "crypto-browserify": "^3.12.0",
     "events": "^3.3.0",
     "https-browserify": "^1.0.0",
@@ -62,6 +63,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1"
