--- a/back-end/package.json
+++ b/back-end/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "daily diary for everyone",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html",
-    "test": "jest",
     "serve": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -48,7 +45,6 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
-    "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -61,12 +57,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.9.1",
-    "react-datepicker": "^4.24.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "passport-local-mongoose": "^8.0.0"
   },
   "browserslist": [
     "last 2 Chrome versions",
