--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,7 @@
   "description": "daily diary for everyone",
   "scripts": {
     "serve": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon -L server.js"
   },
   "proxy": "http://localhost:4006",
   "repository": {
