--- a/front-end/package.json
+++ b/front-end/package.json
@@ -42,12 +42,15 @@
     "util": "^0.12.5"
   },
   "dependencies": {
+    "@parcel/watcher": "^2.3.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "node-fetch": "^3.3.2",
     "npkill": "^0.11.3",
+    "parcel-bundler": "^1.12.5",
+    "parcel": "^2.10.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-datepicker": "^4.24.0",
@@ -56,6 +59,7 @@
   },
   "browserslist": [
     "last 2 Chrome versions",
-    "last 2 Firefox versions"
+    "last 2 Firefox versions",
+    "> 0.5%, last 2 versions, not dead"
   ]
 }
